<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="15dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true"
    app:cardBackgroundColor="#fff">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="5dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/card_image"
            android:layout_width="90dp"
            android:layout_height="90dp"
            app:civ_border_color="#FFFFFF"
            app:civ_border_width="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/profile_pic" />

        <TextView
            android:id="@+id/card_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/name"
            android:textColor="@color/mainFontColor"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_toEndOf="@id/card_image"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/card_course"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/course"
            android:textColor="@color/mainFontColor"
            android:textSize="18sp"
            android:layout_below="@id/card_name"
            android:layout_toEndOf="@id/card_image"
            android:layout_marginStart="30dp"/>


        <TextView
            android:id="@+id/card_exp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:textColor="@color/mainFontColor"
            android:text="@string/experience"
            android:textSize="18sp"
            android:layout_toEndOf="@id/card_image"
            android:layout_below="@id/card_course"
            android:layout_marginStart="30dp"
            />



    </RelativeLayout>

</androidx.cardview.widget.CardView>