<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Account">


    <include
        android:id="@+id/acct_nav"
        layout="@layout/navigation"
        tools:layout_editor_absoluteX="154dp"
        tools:layout_editor_absoluteY="0dp" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        app:civ_border_color="#FFFFFF"

        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/profile_pic" />

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto"
        android:text="@string/name"
        android:textColor="#4C4B5E"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_image" />

    <ImageView
        android:id="@+id/acct_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="276dp"
        android:contentDescription="@string/element"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/choose_profile" />

    <ImageView
        android:id="@+id/acct_mybuddy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/element"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/acct_profile"
        app:srcCompat="@drawable/choose_buddy" />


    <ImageView
        android:id="@+id/acct_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/element"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/acct_mybuddy"
        app:srcCompat="@drawable/choose_event" />

    <ImageView
        android:id="@+id/acct_study"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        android:contentDescription="@string/element"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/acct_event"
        app:srcCompat="@drawable/choose_track_study" />

    <ImageView
        android:id="@+id/acct_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/element"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/acct_study"
        app:srcCompat="@drawable/choose_logout" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="130dp"
        android:fontFamily="@font/roboto"
        android:text="@string/acct_profile"
        android:textColor="#666666"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/acct_profile"
        app:layout_constraintStart_toStartOf="@+id/acct_profile"
        app:layout_constraintTop_toTopOf="@+id/acct_profile" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto"
        android:text="SENIOR/JUNIOR BUDDY"
        android:textColor="#666666"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/acct_mybuddy"
        app:layout_constraintHorizontal_bias="0.474"
        app:layout_constraintStart_toStartOf="@+id/acct_mybuddy"
        app:layout_constraintTop_toTopOf="@+id/acct_mybuddy" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/roboto"
        android:text="STUDY EVENTS"
        android:textColor="#666666"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/acct_event"
        app:layout_constraintHorizontal_bias="0.42"
        app:layout_constraintStart_toStartOf="@+id/acct_event"
        app:layout_constraintTop_toTopOf="@+id/acct_event" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:fontFamily="@font/roboto"
        android:text="@string/track_my_study"
        android:textColor="#666666"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/acct_study"
        app:layout_constraintStart_toStartOf="@+id/acct_study"
        app:layout_constraintTop_toTopOf="@+id/acct_study" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="130dp"
        android:layout_marginRight="130dp"
        android:fontFamily="@font/roboto"
        android:text="@string/log_out"
        android:textColor="#666666"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/acct_logout"
        app:layout_constraintStart_toStartOf="@+id/acct_logout"
        app:layout_constraintTop_toTopOf="@+id/acct_logout" />


    <ImageView
        android:id="@+id/acct_change_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rotation="-45"
        app:layout_constraintBottom_toTopOf="@+id/profile_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.955"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/key" />


</androidx.constraintlayout.widget.ConstraintLayout>